[package]
name = "bofh"
version = "0.0.8"
authors = ["Tobias V. Langhoff"]
edition = "2021"
description = "Command-line client for the Cerebrum IGA"
license = "MIT"
repository = "https://github.com/tobiasvl/bofh-rs"
documentation = "https://docs.rs/bofh"
categories = ["api-bindings", "command-line-utilities"]

[dependencies]
xmlrpc = "0.15"
thiserror = "1.0"
rustyline = "10"
rustyline-derive = "0.7"
clap = { version = "3.2", features = ["derive"] }
whoami = "1.2"
rpassword = "7.0"
colored = "2.0"
